# mdisk-caches

./: LICENSE  README.md  pyproject.toml  run_tests.py
src/mdisk_caches/: __init__.py  __main__.py  cli.py  configure.py  detect.py  mount.py  recommend.py  report.py
tests/: test_cli.py  test_configure.py  test_detect.py  test_mount.py  test_recommend.py
