[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdisk-caches"
version = "0.1.0"
description = "CLI tool to set up and manage RAM disk / tmpfs caches on macOS and Ubuntu"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Hugo Gu", email = "hugogu@outlook.com" },
]
keywords = ["ramdisk", "tmpfs", "cache", "maven", "gradle", "npm", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
# Zero external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
mdisk-caches = "mdisk_caches.cli:main"

[project.urls]
Homepage = "https://github.com/hugogu/mdisk-caches"
Repository = "https://github.com/hugogu/mdisk-caches"
Issues = "https://github.com/hugogu/mdisk-caches/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdisk_caches"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
